fixed alignment to work with smaller devices

--- a/CareWheels/www/css/style.css
+++ b/CareWheels/www/css/style.css
@@ -70,7 +70,7 @@ embed{
 }
 
 .reminderTime {
-  margin-left: 200px;
+  margin-left: 75%;
   text-align: center;
   font-size:30px;
 }
